--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portafolio de [Tu Nombre]</title>
+  <title>Portafolio de Jose Gutierrez</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
@@ -114,7 +114,7 @@
 
   <header>
     <h1>Hola, soy Jose Gutierrez</h1>
-    <p>Licenciado en Desarrollo de Software | apasionado por la tecnologia </p>
+    <p>Licenciado en Desarrollo de Software | apasionado por la tecnología </p>
   </header>
 
   <div class="container">
