Add QR code generator project to index.html
Added a new QR code generator project section with details and links.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
 
   <div class="container">
 
+<div class="project">
+      <h2>Generador de codigos QR</h2>
+      <img src="https://ibb.co/n8RQfxwp" alt="QR_Generator">
+      <p>Generador de codigos QR, desarrollado con react.js + vite  y tailwind para el frontend y Python - Fastapi para el backend desplegando el Backend en render y el frontend en netlify. Este proyecto permite crear codigos QR a partir de texto plano y descargarlos en formato .png para posteriormente posicionarlo donde queramos
+      dato a tener encuenta: puede tardar de 20- 60 segundos en generar el primer QR por temas del plan free en render, una vez se genera el primer QR las demas cargas son rapidas.</p>
+      <a href="https://github.com/JoseG1515/QR__CREATOR" target="_blank">Ver en GitHub</a> 
+      <a href="https://genuine-starship-7fdcdd.netlify.app/" target="_blank">Demo</a>
+    </div>
+
+    
     <div class="project">
       <h2>Tienda Virtual </h2>
       <img src="https://i.ibb.co/3YQy7n8F/Captura-de-pantalla-2025-07-22-143013.png" alt="TiendaVirtual">
