Enhance project details in index.html
Added project descriptions and links for QR Generator, Virtual Store, Calorie Counter, and Tip Calculator.

--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
 <div class="project">
       <h2>Generador de codigos QR</h2>
       <img src="https://ibb.co/n8RQfxwp" alt="QR_Generator">
-      <p>Generador de codigos QR, desarrollado con react.js + vite  y tailwind para el frontend y Python - Fastapi para el backend desplegando el Backend en render y el frontend en netlify. Este proyecto permite crear codigos QR a partir de texto plano y descargarlos en formato .png para posteriormente posicionarlo donde queramos
-      dato a tener encuenta: puede tardar de 20- 60 segundos en generar el primer QR por temas del plan free en render, una vez se genera el primer QR las demas cargas son rapidas.</p>
-      <a href="https://github.com/JoseG1515/QR__CREATOR" target="_blank">Ver en GitHub</a> 
+  <h3>Sobre el proyecto </h3>
+      <p>Generador de codigos QR, desarrollado con react.js + vite  y tailwind para el frontend y Python - Fastapi para el backend desplegando el Backend en render y el frontend en netlify. Este proyecto permite crear codigos QR a partir de texto plano y descargarlos en formato .png para posteriormente posicionarlo donde queramos.</p> 
+       <h3>dato a tener encuenta:</h3> <p>puede tardar de 20- 60 segundos en generar el primer QR por temas del plan free en render, una vez se genera el primer QR las demas cargas son rapidas.</p>
+      <a href="https://github.com/JoseG1515/QR__CREATOR" target="_blank">Ver en GitHub
       <a href="https://genuine-starship-7fdcdd.netlify.app/" target="_blank">Demo</a>
     </div>
 
@@ -132,6 +133,7 @@
     <div class="project">
       <h2>Tienda Virtual </h2>
       <img src="https://i.ibb.co/3YQy7n8F/Captura-de-pantalla-2025-07-22-143013.png" alt="TiendaVirtual">
+      <h3>Sobre el proyecto </h3>
       <p>Tienda Virtual, desarrollada con TypeScript, react.js y tailwind, permite añadir productos al carrito de compras y mantener los productos incluso luego de refrezcar la pagina utilizando localStorage</p>
       <a href="https://github.com/JoseG1515/guitarla-ts-UseReducer" target="_blank">Ver en GitHub</a> 
       <a href="https://starlit-crostata-bde245.netlify.app/" target="_blank">Demo</a>
@@ -140,6 +142,7 @@
     <div class="project">
       <h2>Contador de Calorias</h2>
       <img src="https://i.ibb.co/4ZyCMyCw/Captura-de-pantalla-2025-07-22-145544.png" alt="Contador de calorias">
+      <h3>Sobre el proyecto </h3>
       <p>Aplicación para llevar control de calorias personales, tambien utiliza localStorage para que la pagina sea persistente ante el refresh, fue desarrollada en TypeScrip, react.js y tailwind.</p>
       <a href="https://github.com/JoseG1515/calorie-tracker"_blank">Ver en GitHub</a> 
       <a href="https://fascinating-pasca-34bfc3.netlify.app/" target="_blank">Demo</a>
@@ -149,6 +152,7 @@
     <div class="project">
       <h2>Calculadora de Propinas</h2>
       <img src="https://i.ibb.co/hxmhbQZC/Captura-de-pantalla-2025-07-22-150903.png" alt="Contador de calorias">
+      <h3>Sobre el proyecto </h3>
       <p>aplicacion para calcular el monto a pagar añadiendo propinas en un restaurante, esta desarrollado en TypeScript, react.js, y tailwind.</p>
       <a href="https://github.com/JoseG1515/calculadora-propinas-reducer" target="_blank">Ver en GitHub</a>
       <a href="https://aesthetic-gumdrop-e92e18.netlify.app/" target="_blank">Demo</a>
