--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
 <div class="project">
       <h2>Generador de codigos QR</h2>
-      <img src="https://ibb.co/n8RQfxwp" alt="QR_Generator">
+      <img src="https://i.ibb.co/6JNDbjyQ/image.png" alt="image" border="0" />
   <h3>Sobre el proyecto </h3>
       <p>Generador de codigos QR, desarrollado con react.js + vite  y tailwind para el frontend y Python - Fastapi para el backend desplegando el Backend en render y el frontend en netlify. Este proyecto permite crear codigos QR a partir de texto plano y descargarlos en formato .png para posteriormente posicionarlo donde queramos.</p> 
        <h3>dato a tener encuenta:</h3> <p>puede tardar de 20- 60 segundos en generar el primer QR por temas del plan free en render, una vez se genera el primer QR las demas cargas son rapidas.</p>
